<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/info_main_title"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:background="@drawable/top1"
        android:gravity="center"
        android:text="@string/situation"
        android:textColor="#ffffffff"
        android:textSize="18.0dip"/>

    <TabHost
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@android:id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@+id/msg_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/tv_wb"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/titlebar_lightgray_bg" >
                </TextView>
            </FrameLayout>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0" />

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.0"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/main_radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/btnbg"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_button0"
                    style="@style/main_tab_bottom"
                    android:layout_marginTop="2.0dip"
                    android:drawableTop="@drawable/btn1_2"
                    android:tag="radio_button0"
                    android:text="@string/main_home" />

                <RadioButton
                    android:id="@+id/radio_button1"
                    style="@style/main_tab_bottom"
                    android:layout_marginTop="2.0dip"
                    android:drawableTop="@drawable/btn2"
                    android:tag="radio_button1"
                    android:text="@string/main_news" />

                <RadioButton
                    android:id="@+id/radio_button2"
                    style="@style/main_tab_bottom"
                    android:layout_marginTop="2.0dip"
                    android:drawableTop="@drawable/btn3"
                    android:tag="radio_button2"
                    android:text="@string/main_my_info" />

                <RadioButton
                    android:id="@+id/radio_button3"
                    style="@style/main_tab_bottom"
                    android:layout_marginTop="2.0dip"
                    android:drawableTop="@drawable/btn4"
                    android:tag="radio_button3"
                    android:text="@string/menu_search" />
            </RadioGroup>
        </LinearLayout>
    </TabHost>

</LinearLayout>