<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/info_main_title"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:background="@drawable/top"
        android:gravity="center"
        android:text="@string/around_top"
        android:textColor="#ffffffff"
        android:textSize="18.0dip"/>

    <TabHost
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@android:id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >
            
			<FrameLayout
                android:id="@+id/msg_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" >
                <TextView
                    android:id="@+id/tv_wb"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/titlebar_lightgray_bg" >
                </TextView>
            </FrameLayout>
            
			<FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0" />
			
            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.0"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/main_radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/btnbg"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_button0"
                    style="@style/main_tab_bottom"
                    android:layout_marginTop="2.0dip"
                    android:drawableTop="@drawable/aroundm_02"
                    android:tag="radio_button0"
                    android:text="@string/an_tab1" />

                <RadioButton
                    android:id="@+id/radio_button1"
                    style="@style/main_tab_bottom"
                    android:layout_marginTop="2.0dip"
                    android:drawableTop="@drawable/aroundy_01"
                    android:tag="radio_button1"
                    android:text="@string/an_tab2" />

                <RadioButton
                    android:id="@+id/radio_button2"
                    style="@style/main_tab_bottom"
                    android:layout_marginTop="2.0dip"
                    android:drawableTop="@drawable/aroundg_01"
                    android:tag="radio_button2"
                    android:text="@string/an_tab3" />
            </RadioGroup>
        </LinearLayout>
    </TabHost>

</LinearLayout>